# instanced-renderer

./: .gitignore  CMakeLists.txt  C_VulkanWindowedSolution.sln  README.md  Vulkan_Renderer_Solution.sln  build.bat  build.sh  clean.bat  compileShaders.bat  debug.txt  frame0-1triangle.rdc  gen.bat  gfxrecon_capture_frames_1_through_2_20220314T071840.gfxr  gfxrecon_capture_frames_1_through_2_20220314T071859.gfxr  gfxrecon_capture_frames_1_through_2_20220314T073945.gfxr  project.4coder  renderdoc.cap  run.bat  vk_apidump.txt
.misc/: blackboard.mlt  doc_draft.md  scratch.md
C_VulkanWindowedProgram/: C_VulkanWindowedProgram.vcxproj  C_VulkanWindowedProgram.vcxproj.filters  Engine.h  main.cpp
C_VulkanWindowedProgram/shaders/: frag.spv  fragShader.frag  shaderComp.bat  vert.spv  vertShader.vert
Vulkan_Renderer/: Engine.h  Vulkan_Renderer.filters  Vulkan_Renderer.vcxproj  Vulkan_Renderer.vcxproj.filters  cpp.hint  includes.h  main.cpp  stb_image.h  types.h  vk_buffer.h  vk_context.h  vk_texture.h
Vulkan_Renderer/shaders/: frag.spv  fragShader.frag  vert.spv
assets/3D/khronos_logo/: scene.gltf
assets/3D/triangle/: scene.gltf
assets/spaceships/: License.txt
c_src/: cvkayDevice.c
examples/: InstanceBuckets.cpp  Instances.cpp  Invaders.cpp  boids.cpp  ctest.c  cvkay.h  examples.cpp  gltf.cpp  main.cpp
shaders/: basicComputeShader.comp  basicComputeShader.comp.spv  boids.comp  mesh.frag  mesh.frag.spv  mesh.vert  mesh.vert.spv  quad.vert  quad.vert.spv  textureArray.frag  textureArray.frag.spv  triangleMesh.vert  triangleMesh.vert.spv  writeRenderTarget.comp  writeRenderTarget.comp.spv
src/: Vkay.h  VkayBucket.cpp  VkayBucket.h  VkayCamera.h  VkayContext.cpp  VkayHelpers.cpp  VkayInitializers.cpp  VkayInitializers.h  VkayInstances.h  VkayInstancesBucket.cpp  VkayInstancesBucket.h  VkayMesh.h  VkayRenderer.cpp  VkayRenderer.h  VkayRnderer.cpp  VkaySprite.cpp  VkaySprite.h  VkayTexture.cpp  VkayTexture.h  VkayTypes.h  cgltf.h  examples.cpp  main.cpp  vk_engine.cpp  vk_engine.h  vk_helpers.cpp  vk_initializers.cpp  vk_initializers.h  vk_instances.h  vk_mem_alloc.h  vk_mesh.cpp  vk_mesh.h  vk_renderer.cpp  vk_renderer.h  vk_texture.h  vk_types.h
src/vkbootstrap/: VkBootstrap.cpp
